--- a/app.json
+++ b/app.json
@@ -13,10 +13,10 @@
       "media",
       "bot"
     ],
-  "repository": "https://github.com/LazyDeveloperr/Lazy-Streamer-BOT",
+  "repository": "https://github.com/Dhanu990/Lazy-Streamer-BOT/tree/main",
   "success_url": "/",
   "logo": "https://telegra.ph/file/f2c253c5b0b747042cf4c.png",
-  "website": "http://t.me/LazyDeveloper",
+  "website": "https://t.me/filmyspotmovies1",
   "env": {
       "ENV": {
           "description": "Set this to True if you don't want to crash the bot",
